--- a/contingency/contingency-api/pom.xml
+++ b/contingency/contingency-api/pom.xml
@@ -14,7 +14,7 @@
     
     <parent>
         <groupId>com.powsybl</groupId>
-        <artifactId>powsybl-core</artifactId>
+        <artifactId>powsybl-contingency</artifactId>
         <version>2.2.0-SNAPSHOT</version>
     </parent>
 
