--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -209,6 +209,12 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-contingency-dsl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-entsoe-util</artifactId>
             <version>${project.version}</version>
         </dependency>
