--- a/cim1/cim1-converter/pom.xml
+++ b/cim1/cim1-converter/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-cim1</artifactId>
-        <version>2.2.0</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-cim1-converter</artifactId>
