--- a/security-analysis/security-analysis-afs-local/pom.xml
+++ b/security-analysis/security-analysis-afs-local/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-security-analysis</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>2.2.0</version>
+        <version>2.3.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-security-analysis-afs-local</artifactId>
