--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: java
 
 dist: trusty
+
 sudo: required
 
+os:
+    - windows
+    - linux
+    - osx
+
 jdk:
-- openjdk11
+    - openjdk11
 
 addons:
     sonarcloud:
@@ -13,4 +19,4 @@ addons:
             secure: ${SONAR_TOKEN}
 
 script:
-- mvn clean verify -Pjacoco coveralls:report sonar:sonar
+    - mvn clean verify -Pjacoco coveralls:report sonar:sonar
