refactoring to use jgrapht

--- a/loadflow/loadflow-results-completion/pom.xml
+++ b/loadflow/loadflow-results-completion/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>powsybl-loadflow-validation</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
