--- a/iidm/iidm-util/pom.xml
+++ b/iidm/iidm-util/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.3.0</version>
     </parent>
 
     <artifactId>powsybl-iidm-util</artifactId>
