--- a/entsoe-util/pom.xml
+++ b/entsoe-util/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>2.3.0</version>
+        <version>2.4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-entsoe-util</artifactId>
