Fix bus breaker voltage level export + migrate to graphviz-java + add unit tests

--- a/iidm/iidm-api/pom.xml
+++ b/iidm/iidm-api/pom.xml
@@ -64,8 +64,8 @@
             <artifactId>groovy-all</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.kohsuke</groupId>
-            <artifactId>graphviz-api</artifactId>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
