--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
         <commonslang3.version>3.4</commonslang3.version>
         <commonsmath3.version>3.6.1</commonsmath3.version>
         <gdata.version>1.41.1_1</gdata.version>
-        <graphvizapi.version>1.1</graphvizapi.version>
+        <graphvizjava.version>0.8.0</graphvizjava.version>
         <groovy.version>2.4.12</groovy.version>
         <guava.version>20.0</guava.version>
         <jackson.version>2.8.11.3</jackson.version>
@@ -707,9 +707,9 @@
                 <version>${jgrapht.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.kohsuke</groupId>
-                <artifactId>graphviz-api</artifactId>
-                <version>${graphvizapi.version}</version>
+                <groupId>guru.nidi</groupId>
+                <artifactId>graphviz-java</artifactId>
+                <version>${graphvizjava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mapdb</groupId>
