--- a/iidm/iidm-api/pom.xml
+++ b/iidm/iidm-api/pom.xml
@@ -52,6 +52,10 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
         </dependency>
@@ -62,10 +66,6 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.kohsuke</groupId>
-            <artifactId>graphviz-api</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
