--- a/security-analysis/security-analysis-api/pom.xml
+++ b/security-analysis/security-analysis-api/pom.xml
@@ -48,6 +48,10 @@
     <dependencies>
         <!-- Compilation dependencies -->
         <dependency>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
