--- a/loadflow/simple-loadflow/pom.xml
+++ b/loadflow/simple-loadflow/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>powsybl-loadflow</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>2.3.0-SNAPSHOT</version>
+        <version>2.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>powsybl-simple-loadflow</artifactId>
+    <name>Loadflow simple implementation</name>
 
     <dependencies>
         <dependency>
