--- a/cgmes/cgmes-model/pom.xml
+++ b/cgmes/cgmes-model/pom.xml
@@ -79,10 +79,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <scope>test</scope>
         </dependency>
+
         <!-- Test dependencies include all considered triple store engines -->
         <dependency>
             <groupId>${project.groupId}</groupId>
