--- a/triple-store/triple-store-impl-rdf4j/pom.xml
+++ b/triple-store/triple-store-impl-rdf4j/pom.xml
@@ -47,6 +47,16 @@
         <dependency>
             <groupId>org.eclipse.rdf4j</groupId>
             <artifactId>rdf4j-runtime</artifactId>
+            <!--
+              The exclusion should no longer be necessary when upgrading to rdf4j 3+
+              see https://github.com/eclipse/rdf4j/issues/1346
+            -->
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
