--- a/afs/afs-storage-api/pom.xml
+++ b/afs/afs-storage-api/pom.xml
@@ -21,7 +21,10 @@
     <artifactId>powsybl-afs-storage-api</artifactId>
     <name>AFS storage API</name>
     <description>AFS storage API</description>
-
+    <properties>    
+        <springboot.version>2.0.4.RELEASE</springboot.version>
+        <springcloud.version>Finchley.SR1</springcloud.version>
+    </properties>        
     <build>
         <plugins>
             <plugin>
@@ -84,7 +87,28 @@
             <artifactId>slf4j-simple</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>    
     </dependencies>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${springboot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${springcloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
 
