--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
         <maven.plugin.annotations.version>3.5.2</maven.plugin.annotations.version>
         <mockito.version>1.10.19</mockito.version>
         <poi.version>3.15</poi.version>
+        <powermock.version>1.6.4</powermock.version>
         <protobuf.version>2.5.0</protobuf.version>
         <rdf4j.version>2.4.4</rdf4j.version>
         <resteasy.version>3.1.4.Final</resteasy.version>
@@ -717,6 +718,18 @@
                 <groupId>org.mapdb</groupId>
                 <artifactId>mapdb</artifactId>
                 <version>${mapdb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-api-mockito</artifactId>
+                <version>${powermock.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.powermock</groupId>
+                <artifactId>powermock-module-junit4</artifactId>
+                <version>${powermock.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
