--- a/triple-store/triple-store-test/pom.xml
+++ b/triple-store/triple-store-test/pom.xml
@@ -42,6 +42,11 @@
     <dependencies>
         <!-- Test dependencies -->
         <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
