Injectable security analysis preprocessors, with a preprocessor to customize currents limits through a DSL.
* Add an "execution" layer above the security analysis to define the common
  interface between distributed computations and local computation.
* Add a preprocessing step for the local computation. The preprocessor
  is selected by its name through configuration. The preprocessor takes the
  so-called "contingencies-file" of the tool as input.
* Implement a DSL based preprocessor, which may be enhanced with additional
  keywords through service injection.
  The proposed services read contingencies and current limits definitions from
  the input file.

Signed-off-by: Sylvain Leclerc <sylvain.leclerc@rte-france.com>

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@
 /security-analysis/security-analysis-afs/target/
 /security-analysis/security-analysis-afs-local/target/
 /security-analysis/security-analysis-api/target/
+/security-analysis/security-analysis-dsl/target/
 /sensitivity-api/target/
 /simulation-api/target/
 /scripting/target/
