--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -149,12 +149,6 @@
 
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-ampl-converter</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cgmes-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -222,6 +216,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-converter-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-iidm-dsv-converter</artifactId>
             <version>${project.version}</version>
         </dependency>
 
