--- a/iidm/iidm-xml-converter/pom.xml
+++ b/iidm/iidm-xml-converter/pom.xml
@@ -30,7 +30,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Automatic-Module-Name>com.powsybl.iidm.xml</Automatic-Module-Name>
+                            <Automatic-Module-Name>com.powsybl.iidm.xml.converter</Automatic-Module-Name>
                         </manifestEntries>
                     </archive>
                 </configuration>
