--- a/simulation-api/pom.xml
+++ b/simulation-api/pom.xml
@@ -45,6 +45,10 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
         </dependency>
