Add xml-apis dependency in Jena based implementation of triple store.
It ensures that when pulling the triple-store, you also pull xml-apis,
which becomes necessary.
Otherwise it will only be pulled indirectly by powsybl-iidm-api (through graphviz).

Signed-off-by: Sylvain Leclerc <sylvain.leclerc@rte-france.com>

--- a/triple-store/triple-store-impl-jena/pom.xml
+++ b/triple-store/triple-store-impl-jena/pom.xml
@@ -54,5 +54,9 @@
             <artifactId>powsybl-triple-store-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+        </dependency>
     </dependencies>
 </project>
