--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,19 @@ language: java
 dist: trusty
 sudo: required
 
-os:
-- linux
-- osx
-
 jdk:
 - openjdk11
+- oraclejdk8
+
+# osx images only support one jdk per image, so manually add them to the matrix.
+matrix:
+  include:
+  - os: osx
+    osx_image: xcode9.3
+    jdk: oraclejdk8
+  - os: osx
+    osx_image: xcode10.1
+    jdk: openjdk11
 
 addons:
     sonarcloud:
