--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,10 @@ install:
         [System.IO.Compression.ZipFile]::ExtractToDirectory("C:\maven-bin.zip", "C:\maven")
       }
   - cmd: SET M2_HOME=C:\maven\apache-maven-3.2.5
-  - cmd: SET JAVA_HOME=C:\Program Files\Java\jdk11
   - cmd: SET PATH=%M2_HOME%\bin;%JAVA_HOME%\bin;%PATH%
+environment:
+  matrix:
+    - JAVA_HOME: C:\Program Files\Java\jdk11
+    - JAVA_HOME: C:\Program Files\Java\jdk1.8.0
 build_script:
   - mvn clean package --batch-mode
