--- a/iidm/iidm-dsv-converter/pom.xml
+++ b/iidm/iidm-dsv-converter/pom.xml
@@ -13,7 +13,7 @@
 
     <parent>
         <groupId>com.powsybl</groupId>
-        <artifactId>powsybl-core</artifactId>
+        <artifactId>powsybl-iidm</artifactId>
         <version>3.0.0-SNAPSHOT</version>
     </parent>
 
