change iidm-dsv-converter automatic module name
Signed-off-by: RALAMBOTIANA MIORA <miora.ralambotiana@rte-france.com>

--- a/iidm/iidm-dsv-converter/pom.xml
+++ b/iidm/iidm-dsv-converter/pom.xml
@@ -29,7 +29,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Automatic-Module-Name>com.powsybl.iidm.dsv</Automatic-Module-Name>
+                            <Automatic-Module-Name>com.powsybl.iidm.dsv.converter</Automatic-Module-Name>
                         </manifestEntries>
                     </archive>
                 </configuration>
