Fix triple store RDF4J writer: explicit statement sequence processing
Signed-off-by: Luma Zamarreño <zamarrenolm@aia.es>

--- a/triple-store/triple-store-impl-rdf4j/pom.xml
+++ b/triple-store/triple-store-impl-rdf4j/pom.xml
@@ -67,5 +67,28 @@
             <artifactId>powsybl-triple-store-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-    </dependencies>
+
+		<!-- Test dependencies -->
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.xmlunit</groupId>
+            <artifactId>xmlunit-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+	</dependencies>
 </project>
