--- a/ucte/ucte-converter/pom.xml
+++ b/ucte/ucte-converter/pom.xml
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.27.0</version>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
