First try at creating data for CreateGeneratorBay modification (cf #2315)
Signed-off-by: VEDELAGO MIORA <miora.ralambotiana@rte-france.com>

--- a/iidm/iidm-modification/pom.xml
+++ b/iidm/iidm-modification/pom.xml
@@ -38,8 +38,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-commons</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
