--- a/cgmes/cgmes-shortcircuit/pom.xml
+++ b/cgmes/cgmes-shortcircuit/pom.xml
@@ -55,6 +55,11 @@
 
         <!-- Test dependencies -->
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-cgmes-conformity</artifactId>
             <version>${project.version}</version>
