--- a/cgmes/cgmes-measurements/pom.xml
+++ b/cgmes/cgmes-measurements/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>powsybl-cgmes</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>4.11.0-SNAPSHOT</version>
+        <version>5.0.0-RC1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
