--- a/cgmes/cgmes-model-alternatives/pom.xml
+++ b/cgmes/cgmes-model-alternatives/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-cgmes</artifactId>
-        <version>4.11.0-SNAPSHOT</version>
+        <version>5.0.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-cgmes-model-alternatives</artifactId>
