--- a/cgmes/pom.xml
+++ b/cgmes/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-core</artifactId>
-        <version>4.11.0-SNAPSHOT</version>
+        <version>5.0.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-cgmes</artifactId>
