--- a/dynamic-simulation/dynamic-simulation-tool/pom.xml
+++ b/dynamic-simulation/dynamic-simulation-tool/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-dynamic-simulation</artifactId>
-        <version>4.11.0-SNAPSHOT</version>
+        <version>5.0.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-dynamic-simulation-tool</artifactId>
