--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-core</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>4.11.0-SNAPSHOT</version>
+        <version>5.0.0-RC1</version>
     </parent>
 
     <artifactId>powsybl-tools</artifactId>
