rename boundary method to get voltage level of network side
Signed-off-by: Luma <zamarrenolm@aia.es>

--- a/distribution-core/pom.xml
+++ b/distribution-core/pom.xml
@@ -446,7 +446,7 @@
             <plugin>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-itools-packager-maven-plugin</artifactId>
-                <version>${project.version}</version>
+                <version>4.10.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
