--- a/dynamic-simulation/dynamic-simulation-tool/pom.xml
+++ b/dynamic-simulation/dynamic-simulation-tool/pom.xml
@@ -110,10 +110,9 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-tools</artifactId>
+            <artifactId>powsybl-tools-test</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
-            <type>test-jar</type>
         </dependency>
     </dependencies>
 
