--- a/security-analysis/security-analysis-default/pom.xml
+++ b/security-analysis/security-analysis-default/pom.xml
@@ -134,10 +134,9 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-tools</artifactId>
+            <artifactId>powsybl-tools-test</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
-            <type>test-jar</type>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
