--- a/cgmes/cgmes-model-alternatives/pom.xml
+++ b/cgmes/cgmes-model-alternatives/pom.xml
@@ -86,9 +86,8 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-cgmes-model</artifactId>
+            <artifactId>powsybl-cgmes-model-test</artifactId>
             <version>${project.version}</version>
-            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <!-- Test with all known triple store engines -->
