--- a/pom.xml
+++ b/pom.xml
@@ -237,9 +237,8 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>powsybl-cgmes-model</artifactId>
+                <artifactId>powsybl-cgmes-model-test</artifactId>
                 <version>${project.version}</version>
-                <type>test-jar</type>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
