--- a/loadflow/loadflow-scripting/pom.xml
+++ b/loadflow/loadflow-scripting/pom.xml
@@ -88,9 +88,8 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>powsybl-scripting</artifactId>
+            <artifactId>powsybl-scripting-test</artifactId>
             <version>${project.version}</version>
-            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
     </dependencies>
