Change name of voltageMap to voltageProfileResult in ShortCircuitParameters and FaultParameters.
Signed-off-by: Coline PILOQUET <coline.piloquet@rte-france.com>

--- a/shortcircuit-api/src/test/resources/config.yml
+++ b/shortcircuit-api/src/test/resources/config.yml
@@ -1,6 +1,6 @@
 short-circuit-parameters:
   with-limit-violations: false
-  with-voltage-map: false
+  with-voltage-profile-result: false
   study-type: "SUB_TRANSIENT"
   with-feeder-result: false
   min-voltage-drop-proportional-threshold: 1.2
