--- a/pom.xml
+++ b/pom.xml
@@ -402,6 +402,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>powsybl-iidm-tck</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-iidm-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
