--- a/iidm/iidm-impl/pom.xml
+++ b/iidm/iidm-impl/pom.xml
@@ -67,6 +67,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-iidm-tck</artifactId>
             <version>${project.version}</version>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
