Fix Sonar issues
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@gmail.com>

--- a/commons-test/pom.xml
+++ b/commons-test/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>xmlunit-core</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
